fix deprecated warnings eg dialog.show() -> setVisible(true)